# callcenter

./: .gitignore
mgmt/: deploy.py  inventory.py  pyproject.toml
mgmt/files/: 99-dnsmasq-restart  asterisk  dhcp  extensions.conf  firewall  lantiq.conf  network  network.j2  packages.py  pjsip.conf  pjsip_wizard.conf
server/: extensions.conf
